# pulsar

./: .clang-format  .gitignore  README.md  install.ps1  meson.build  post_install.ps1
.github/workflows/: linux.yml  macos.yml  windows-2.yml  windows-msvc.yml  windows.yml
apps/: meson.build
apps/vision-editor/: main.cpp  meson.build
core/: common.hpp  core_test.cpp  meson.build  object.cpp  object.hpp  reference.cpp  reference.hpp  safe_refcount.hpp  version.hpp
core/error/: error_macros.cpp  error_macros.hpp  meson.build
core/math/: common_functions.cpp  meson.build
core/server/: event.hpp  meson.build  server.hpp
core/string/: meson.build  string.cpp  string.hpp
core/time/: meson.build  stopwatch.cpp  stopwatch.hpp
main/: main.cpp  main_test.cpp  meson.build
misc/apt/: dependencies
misc/brew/: dependencies
misc/scoop/: dependencies  sdl2.json
services/: display_server.hpp  meson.build
services/input/: events.hpp  input.cpp  input.hpp  input_test.cpp  key_list.hpp  meson.build
services/native_toolkit/: meson.build  ntk_test.cpp  window.cpp  window.hpp
services/rendering/: image.cpp  image.hpp  meson.build  shader.cpp  shader.hpp
services/window/: meson.build  tool_window.cpp  tool_window.hpp
